compiler/src/test/resources/golden/errors/eff_pure_calls_io.dawn
fn greet() -> Unit = println("hi")
