compiler/src/test/resources/golden/errors/eff_pure_calls_io.err
error: function `greet` is not declared !io but calls `println` (!io)
  --> eff_pure_calls_io.dawn:1:22
  |
1 | fn greet() -> Unit = println("hi")
  |                      ^^^^^^^
  = hint: add !io to the end of the signature, or remove the call
